--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -57,4 +57,4 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{ github.repository }}:latest
+      run: docker build . --file Dockerfile --tag server:$(date +%s)
